
project('ADE Documentation', 'c',
  version : '0.67',
  license : 'GPL2',
  meson_version : '>= 1.1'
)

install_subdir('documentation', install_dir : get_option('datadir') / 'doc/ade')
install_subdir('info', install_dir : get_option('datadir') / 'doc/ade')


# vim: ts=2 sts=2 sw=2 et
# end of file
